fixed width overflow

--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,10 @@
   src: url("/fonts/impact.ttf") format("truetype");
 }
 
-body {
-  overflow-x: hidden;
-}
 
-p {
-  margin: 0;
-  padding: 0;
+*{
+  margin:0 ;
+  padding:0 ;
 }
 
 .mainContainer {
@@ -54,27 +51,6 @@ p {
     transform: translateX(0%);
   }
 }
-
-/* typewritter logic */
-
-/* animation: typeWritterCursor 0.6s step-end infinite alternate,
-    typeWritterTyping 1s steps(18);
-
-
-@keyframes typeWritterCursor {
-  50% {
-    border-color: transparent;
-  }
-}
-
-@keyframes typeWritterTyping {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
-} */
 
 .imEdoRusso {
   font-size: 6rem;
@@ -122,10 +98,9 @@ p {
 .yellowHorizontalRectangle {
   position: absolute;
   height: 33%;
-  width: 30rem;
+  width: 0;
   right: 0;
   bottom: 4rem;
-  transform: translateX(100%);
   opacity: 0.75;
   background-color: #d8db3a;
   z-index: 20;
@@ -135,7 +110,8 @@ p {
 
 @keyframes appearFromRight {
   100% {
-    transform: translateX(0);
+    /* transform: translateX(0); */
+    width: 30rem;
   }
 }
 
